--- a/landing-page/.github/workflows/deploy.yml
+++ b/landing-page/.github/workflows/deploy.yml
@@ -1,16 +1,19 @@
-name: Deploy React to GitHub Pages
+name: Deploy React App from Subdirectory
 
 on:
   push:
     branches:
-      - main  # измени, если у тебя другая ветка
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: landing-page
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -21,10 +24,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build project
         run: npm run build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
